# lehrfempp

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .projectile  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  all__codim__mesh__data__set_8h_source.html  annotated.html  annotated_dup.js  appveyor.yml  assemble_8h_source.html  assemble__concepts_8h_source.html  assembler_8cc_source.html  assembler_8h_source.html  assembly__types_8h_source.html  base_8h_source.html  check__child__geometry_8cc_source.html  check__child__geometry_8h_source.html  check__entity__indexing_8cc_source.html  check__entity__indexing_8h_source.html  check__geometry__orientation_8cc_source.html  check__geometry__orientation_8h_source.html  check__integration__element_8cc_source.html  check__integration__element_8h_source.html  check__jacobian_8cc_source.html  check__jacobian_8h_source.html  check__jacobian__inverse__gramian_8cc_source.html  check__jacobian__inverse__gramian_8h_source.html  check__local__topology_8cc_source.html  check__local__topology_8h_source.html  check__mesh__completeness_8cc_source.html  check__mesh__completeness_8h_source.html  check__sub__geometry_8cc_source.html  check__sub__geometry_8h_source.html  class_variant_visitor-members.html  class_variant_visitor.html  (+659 more)
doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile.in.bak  DoxygenLayout.xml  NPDEFLrefs.aux  filter.cpp  filter.py  header.html  mathjax_config.js  style.css
doc/doxygen/doxygen-awesome/: doxygen-awesome-paragraph-link.js  doxygen-awesome.css
doc/doxygen/filters/: CMakeLists.txt  filter.hpp  filters.cpp  gh_edit_filter.cpp  gh_edit_filter.hpp  link_filter.cpp  link_filter.hpp
doc/doxygen/images/: README.md  ReferenceElements.ai  trialattice.fig
doc/doxygen/pages/: archetypes.dox  archetypes.md  concepts.dox  editor_setup.md  eigen_stacktrace_warning.dox  eigen_stacktrace_warning.md  getting_started.dox  getting_started.md  index.dox  index.md  loggers.dox  modules.dox  modules.md  quick_reference_assembly.dox  quick_reference_assembly.md  quick_reference_bc.md  quick_reference_dofh.md  quick_reference_dofs.dox  quick_reference_dofs.md  quick_reference_emp.dox  quick_reference_emp.md  quick_reference_fe_space.md  quick_reference_fespaces.dox  quick_reference_geometry.dox  quick_reference_geometry.md  quick_reference_index.md  quick_reference_logging.md  quick_reference_mesh.md  quick_reference_quad.md
doc/doxygen/snippets/: CMakeLists.txt  assembler.cc  coomatrix.cpp  dofhandleruse.cc  entityuse.cc  fe_space_lagrange_o1.cc  fe_tools.cc  forward_iterator.cc  geometryuse.cc  gmsh_reader.cc  hierarchic_scalar_fe_space_snippets.cc  lambda_mesh_data_set.cc  line_feed_formatter.cc  loggers.cc  mesh_function_binary.cc  mesh_utils.cc  meshhierarchy.cc  meshuse.cc  quadruleuse.cc  ref_el.cc  timer.cc  vtk_writer.cc
examples/: CMakeLists.txt  README.md
examples/assemble/: CMakeLists.txt  Dirichlet_Laplacian_demo.cc  dof_demo.cc  dof_demo_with_comm.cc  dofh_probe.cc
examples/base/: CMakeCache.txt  CMakeLists.txt  CMakeLists_BACKUP_8340.txt  Makefile  boost_po.cc  boost_po_demo.cc  cmake_install.cmake  ref_el_output.cc  setup.vars  static_vars_demo.cc  static_vars_walkthrough.cc
examples/brep/: CMakeLists.txt
examples/ellbvp_linfe/: CMakeLists.txt  README.md  ellbvp_linfe_demo.cc  homDir_linfe_demo.cc  linfe_homdir_galmat.cc
examples/ellbvp_msh/: CMakeLists.txt  README.md  ellbvp_msh_demo.cc
examples/fe/: CMakeLists.txt
examples/geometry/: CMakeLists.txt  geometry_output.cc
examples/io/: CMakeLists.txt  io_demo.cc  smiley.msh
examples/lecturedemos/: CMakeLists.txt  README.md  cdblfdemo.cc  container_functions.h  demomixedboundaryconditions.cc  demomixedboundaryconditions.h  lecturedemo.h  lecturedemoassemble.cc  lecturedemoassemble.h  lecturedemodof.cc  lecturedemodof.h  lecturedemomain.cc  lecturedemomesh.cc  lecturedemomesh.h  lecturedemomesh.msh  lecturedemomeshfunction.cc  lecturedemomeshfunction.h  lecturedemoquad.cc  lecturedemoquad.h  lecturedemorefine.cc  lecturedemorefine.h  lecturedemotwonorm.cc  lecturedemotwonorm.h
examples/logger/: CMakeLists.txt  mesh_hierarchy_demo.cc
examples/mesh/: CMakeLists.txt  README.md  matlab_testmesh_plot_driver.m  mesh_entity_output.cc  plot_lf_mesh.m  structured_mesh_demo.cc  test_mesh_output_demo.cc  test_meshes.tex
examples/quad/: CMakeLists.txt  quad_demo.cc
examples/refinement/: CMakeLists.txt  point_refinement_demo.cc  refinement_demo.cc  second_order_demo.cc  torus_refinement_demo.cc
experiments/efficiency/: CMakeLists.txt  runtime_test.cc
projects/FisherKPP/: CMakeLists.txt  README.md  convergenceH.m  convergenceTau.m  convergence_linked_main.cc  convergence_meshwidth_main.cc  convergence_tau_main.cc  modelproblem_circle_main.cc  modelproblem_island_main.cc  modelproblem_threecircles_main.cc  norms.cc  norms.h  strangsplitting.cc  strangsplitting.h  strangsplitting_main.cc
projects/dpg/: CMakeLists.txt  README.md  apply_clang_format.sh  discontinuous_fe_constant.h  discontinuous_scalar_reference_finite_element.h  dpg.h  dpg_element_matrix_provider.h  dpg_element_vector_provider.h  dpg_tools.cc  dpg_tools.h  lagr_fe_cubic.h  lagr_fe_quadratic.h  loc_comp_dpg.h  product_dofhandler.cc  product_dofhandler.h  product_element_matrix_provider.h  product_element_matrix_provider_builder.h  product_element_matrix_provider_factory.h  product_element_vector_provider.h  product_element_vector_provider_builder.h  product_element_vector_provider_factory.h  product_fe_space.h  product_fe_space_factory.h  sub_element_matrix_provider.h  sub_element_vector_provider.h  test_target.cc  trace_scalar_reference_finite_element.h
projects/fisher_kpp/: CMakeLists.txt  convergence_linked_main.cc  convergence_meshwidth_main.cc  convergence_tau_main.cc  modelproblem_circle_main.cc  modelproblem_island_main.cc  modelproblem_threecircles_main.cc  strangsplitting.cc  strangsplitting.h  strangsplitting_main.cc
projects/hldo_sphere/: CMakeLists.txt  README.md  hldo_sphere.h  main.sh
projects/ipdg_stokes/: CMakeLists.txt  README.md
(+4250 files in other folders)
