# Helper variable for 'target_include_directories'
# set(LOCAL_INCLUDE_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")

add_subdirectory(assemble)
add_subdirectory(base)
add_subdirectory(ellbvp_linfe)
add_subdirectory(ellbvp_msh)
add_subdirectory(fe)
add_subdirectory(geometry)
add_subdirectory(io)
add_subdirectory(lecturedemos)
add_subdirectory(logger)
add_subdirectory(mesh)
add_subdirectory(quad)
add_subdirectory(refinement)




